[tool.poetry]
name = "advent-code-2023"
version = "0.1.0"
description = ""
authors = ["Paul Novacovici <paulnovacovici@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_code_2023"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
